--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -5,7 +5,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-12">
                 <div class="about-image wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
-                    <img src="{{hostUrl}}assets/frontent_files/img/about/img1.png" alt="image">
+                    <img src="{{hostUrl}}assets/frontent_files/img/about/img1.png" alt="about us clumps" title="about us clumps">
                 </div>
             </div>
 
@@ -13,7 +13,7 @@
                 <div class="about-content">
                     <div class="content">
                         <span class="sub-title"><img src="{{hostUrl}}assets/frontent_files/img/star-icon.png"
-                                alt="image"> About Us</span>
+                                alt="about us clumps" title="about us clumps"> About Us</span>
                         <h2>END TO END DEVELOPMENT</h2>
                         <p>We are a leading software development company, dedicated to providing top-notch solutions
                             that empower businesses to thrive in the digital era. With our team of highly skilled
@@ -24,7 +24,7 @@
                         <ul class="features-list">
                             <li><span>
                                     <div class="icon">
-                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="image">
+                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="Clumps Software Solution: Trusted End-to-End Developer" title="Clumps Software Solution: Trusted End-to-End Developer">
                                     </div>
                                     <h3>5+ Years</h3>
                                     <p>On the market</p>
@@ -32,7 +32,7 @@
 
                             <li><span>
                                     <div class="icon">
-                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="image">
+                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="Team of Experts - Clumps Software Solution" title="Team of Experts - Clumps Software Solution">
                                     </div>
                                     <h3>45+</h3>
                                     <p>Team members</p>
@@ -40,7 +40,7 @@
 
                             <li><span>
                                     <div class="icon">
-                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="image">
+                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="Satisfaction-Guaranteed - Clumps Software Solution" title="Satisfaction-Guaranteed - Clumps Software Solution">
                                     </div>
                                     <h3>100%</h3>
                                     <p>Satisfaction rate</p>
@@ -48,7 +48,7 @@
 
                             <li><span>
                                     <div class="icon">
-                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="image">
+                                        <img src="{{hostUrl}}assets/frontent_files/img/icon1.png" alt="On Time Delivery Guarantee - Clumps Software Solution" title="On Time Delivery Guarantee - Clumps Software Solution">
                                     </div>
                                     <h3>100%</h3>
                                     <p>On Time Delivery</p>
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <div class="circle-shape1"><img src="{{hostUrl}}assets/frontent_files/img/shape/circle-shape1.png" alt="image">
+    <div class="circle-shape1"><img src="{{hostUrl}}assets/frontent_files/img/shape/circle-shape1.png" alt="about us clumps" title="about us clumps">
     </div>
 </section>
 <!-- End About Area -->
@@ -123,7 +123,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-12">
                 <div class="how-its-work-content">
-                    <span class="sub-title"><img src="{{hostUrl}}assets/frontent_files/img/star-icon.png" alt="image">
+                    <span class="sub-title"><img src="{{hostUrl}}assets/frontent_files/img/star-icon.png" alt="Clumps Software Solution for End-to-End Development" title="Clumps Software Solution for End-to-End Development">
                         People Love Us</span>
                     <h2>Why Choose Us?<span class="overlay"></span></h2>
 
@@ -170,7 +170,7 @@
 
             <div class="col-lg-6 col-md-12">
                 <div class="how-its-work-image" data-tilt>
-                    <img src="{{hostUrl}}assets/frontent_files/img/how-its-work.png" alt="image">
+                    <img src="{{hostUrl}}assets/frontent_files/img/how-its-work.png" alt="Clumps Software - Expertise - Customization - Timely Delivery" title="Clumps Software - Expertise - Customization - Timely Delivery">
                 </div>
             </div>
         </div>
@@ -182,7 +182,7 @@
 <section class="process-area pb-70">
     <div class="container">
         <div class="section-title">
-            <span class="sub-title"><img src="{{hostUrl}}assets/frontent_files/img/star-icon.png" alt="image">Our Work
+            <span class="sub-title"><img src="{{hostUrl}}assets/frontent_files/img/star-icon.png" alt="Full Cycle Development: Clumps Software Solution" title="Full Cycle Development: Clumps Software Solution">Our Work
                 Process</span>
             <h2>Delivering Excellence Every Step of the Way<span class="overlay"></span></h2>
             <p>At Clumps Software, we are passionate about empowering businesses with cutting-edge software solutions.
@@ -195,7 +195,7 @@
                 <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="number">1</div>
                     <div class="image">
-                        <img src="{{hostUrl}}assets/frontent_files/img/process/img1.png" alt="image">
+                        <img src="{{hostUrl}}assets/frontent_files/img/process/img1.png" alt="Discovery -Clumps Software Solution" title="Discovery -Clumps Software Solution">
                     </div>
                     <h3>Discovery</h3>
                     <p>We begin by understanding your business goals, requirements, and challenges. Our team conducts
@@ -209,7 +209,7 @@
                     data-wow-duration="1500ms">
                     <div class="number">2</div>
                     <div class="image">
-                        <img src="{{hostUrl}}assets/frontent_files/img/process/img2.png" alt="image">
+                        <img src="{{hostUrl}}assets/frontent_files/img/process/img2.png" alt="planning - Clumps Software Solution" title="planning - Clumps Software Solution">
                     </div>
                     <h3>Planning</h3>
                     <p>Based on our findings, we develop a comprehensive project plan that outlines the scope,
@@ -223,7 +223,7 @@
                     data-wow-duration="1500ms">
                     <div class="number">3</div>
                     <div class="image">
-                        <img src="{{hostUrl}}assets/frontent_files/img/process/img3.png" alt="image">
+                        <img src="{{hostUrl}}assets/frontent_files/img/process/img3.png" alt="Design & Development - Clumps Software" title="Design & Development - Clumps Software">
                     </div>
                     <h3>Design & Development</h3>
                     <p>Our talented designers and developers work hand-in- hand to create visually appealing interfaces
@@ -237,7 +237,7 @@
                     data-wow-duration="1500ms">
                     <div class="number">4</div>
                     <div class="image">
-                        <img src="{{hostUrl}}assets/frontent_files/img/process/img4.png" alt="image">
+                        <img src="{{hostUrl}}assets/frontent_files/img/process/img4.png" alt="Testing and Quality Assurance - Clumps Software" title="Testing and Quality Assurance - Clumps Software">
                     </div>
                     <h3>Testing & Quality Assurance</h3>
                     <p>We rigorously test the software to ensure its functionality, security, and usability. Our quality
@@ -251,7 +251,7 @@
                     data-wow-duration="1500ms">
                     <div class="number">5</div>
                     <div class="image">
-                        <img src="{{hostUrl}}assets/frontent_files/img/process/img5.png" alt="image">
+                        <img src="{{hostUrl}}assets/frontent_files/img/process/img5.png" alt="Deployment and Training - Clumps Software" title="Deployment and Training - Clumps Software">
                     </div>
                     <h3>Deployment & Training</h3>
                     <p style="margin-bottom: 30px">Once the software is ready, we deploy it to your infrastructure or
@@ -265,7 +265,7 @@
                 <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="number">6</div>
                     <div class="image">
-                        <img src="{{hostUrl}}assets/frontent_files/img/process/img6.png" alt="image">
+                        <img src="{{hostUrl}}assets/frontent_files/img/process/img6.png" alt="Support and Maintenance -  Clumps Software" title="Support and Maintenance -  Clumps Software">
                     </div>
                     <h3>Support & Maintenance</h3>
                     <p>Our commitment doesn't end with deployment. We offer ongoing support and maintenance services to
@@ -276,7 +276,7 @@
         </div>
     </div>
 
-    <div class="circle-shape1"><img src="{{hostUrl}}assets/frontent_files/img/shape/circle-shape1.png" alt="image">
+    <div class="circle-shape1"><img src="{{hostUrl}}assets/frontent_files/img/shape/circle-shape1.png" alt="automation - clumps software" title="automation - clumps software">
     </div>
 </section>
 <!-- End How It's Work Area -->
