--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="w-full flex flex-col gap-5 justify-start items-start mb-[70px]">
-            <img src="{{hostUrl}}assets/frontent_files/img/clumpsoftware-black.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/clumpsoftware-black.png" alt="clumps logo" title="clumps logo" srcset="">
         </div>
         <div class=" w-full flex flex-col-reverse md:flex-row mb-[70px] justify-start items-center">
             <div class="w-full lg:w-[50%] flex flex-col">
