--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -33,7 +33,7 @@
         </div>
         <a class="cursor-pointer">
             <img routerLink="/home" src="https://www.clumpssoftware.com/assets/frontent_files/img/clumpssoftware.png"
-                alt="" srcset="">
+                alt="clumps logo" title="clumps logo" srcset="">
         </a>
     </div>
     <div class="hidden lg:w-[50%] lg:flex flex-row flex-nowrap justify-around items-start">
