--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,9 @@
 <section class="w-full flex flex-col">
     <div class="w-full flex flex-row flex-wrap justify-between mt-[150px]">
         <div class="w-full md:w-[38%] flex flex-col justify-center items-start gap-5">
-            <h2 class="text-[40px] md:text-[60px] text-black font-bold">
+            <h1 class="text-[40px] md:text-[40px] text-black font-bold">
                 Empowering Businesses with Innovative Solutions
-            </h2>
+            </h1>
             <p>
                 Welcome to Clumps Software Solutions, where we are committed to empowering businesses with innovative
                 solutions. With a passion for technology and a focus on delivering exceptional results, we specialize in
@@ -15,7 +15,7 @@
                 a consultation </button>
         </div>
         <div class="w-full md:w-[48%] flex justify-end">
-            <img class="h-auto" src="{{hostUrl}}assets/frontent_files/img/homepage/homepage-img-one.png" alt="homepage"
+            <img class="h-auto" src="{{hostUrl}}assets/frontent_files/img/homepage/homepage-img-one.png" alt="homepage" title="homepag"
                 data-aos="zoom-in" data-aos-duration="1000" />
             <!-- <div class="banner-animation-image">
                 <img src="../../assets/frontent_files/img/main-banner/banner-two/img1.png"
