--- a/src/app/pages/services/business-automation/business-automation.component.html
+++ b/src/app/pages/services/business-automation/business-automation.component.html
@@ -26,7 +26,7 @@
     <div class="w-full md:w-[80%] ">
         <div class="relative flex justify-center items-center">
             <img class="absolute  top-[-75px] left-0"
-                src="{{hostUrl}}assets/frontent_files/img/b-automation/icons/8018563-2.png" alt="">
+                src="{{hostUrl}}assets/frontent_files/img/b-automation/icons/8018563-2.png" alt="business process automation" title="business process automation">
             <p class="w-full md:w-[80%] text-black">Business automation services (also known as 'business process
                 automation
                 services's) include business
@@ -37,7 +37,7 @@
                 for end-to-end process automation, and self-service portals across industries and business functions.
             </p>
             <img class="absolute  bottom-[-75px] right-0"
-                src="{{hostUrl}}assets/frontent_files/img/b-automation/icons/8018563-1.png" alt="">
+                src="{{hostUrl}}assets/frontent_files/img/b-automation/icons/8018563-1.png" alt="Business Automation" title="Business Automation">
         </div>
     </div>
 </section>
@@ -82,7 +82,7 @@
             <div
                 class="w-full md:w-[45%] h-auto md:min-h-[300px] flex flex-col justify-center gap-3 border-2 rounded-[30px] p-4">
                 <img class="w-[50px]"
-                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt=""
+                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt="Business Automation" title="Business Automation"
                     srcset="">
                 <h2 class="text-[20px] text-[#33b5CC] font-bold">Focus on value of business automation</h2>
                 <p>We don’t offer automation for the sake of it. Our consultants thoroughly analyze your business
@@ -91,7 +91,7 @@
             <div
                 class="w-full md:w-[45%] h-auto md:min-h-[300px] flex flex-col justify-center gap-3 border-2 rounded-[30px] p-4">
                 <img class="w-[50px]"
-                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt=""
+                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt="Business Automation" title="Business Automation"
                     srcset="">
                 <h2 class="text-[20px] text-[#33b5CC] font-bold">Holistic approach to business automation</h2>
                 <p>We start with mapping out your business processes to establish a clear picture of each process step
@@ -101,7 +101,7 @@
             <div
                 class="w-full md:w-[45%] h-auto md:min-h-[300px] flex flex-col justify-center gap-3 border-2 rounded-[30px] p-4">
                 <img class="w-[50px]"
-                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt=""
+                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt="Strong data security" title="Strong data security"
                     srcset="">
                 <h2 class="text-[20px] text-[#33b5CC] font-bold">Strong data security</h2>
                 <p>Applying 114 Security controls required by ISO 27001 , we safeguard the information assets that we
@@ -110,7 +110,7 @@
             <div
                 class="w-full md:w-[45%] h-auto md:min-h-[300px] flex flex-col justify-center gap-3 border-2 rounded-[30px] p-4 ">
                 <img class="w-[50px]"
-                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt=""
+                    src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt="Optimized implementation" title="Optimized implementation"
                     srcset="">
                 <h2 class="text-[20px] text-[#33b5CC] font-bold">Optimized implementation time and costs</h2>
                 <p>We apply CI/CD and DevOps methodologies to reduce the time of business automation solution
