--- a/src/app/pages/services/social-media/social-media.component.html
+++ b/src/app/pages/services/social-media/social-media.component.html
@@ -75,7 +75,7 @@
             </p>
         </div>
         <div class="w-full md:w-[48%]">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-2.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-2.png" alt="social media management and marketing" title="social media management and marketing" srcset="">
         </div>
     </div>
 </section>
@@ -107,7 +107,7 @@
             </ul>
         </div>
         <div class="w-full md:w-[48%]">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-3.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-3.png" alt="digital marketing" title="digital marketing" srcset="">
         </div>
     </div>
 
@@ -120,7 +120,7 @@
 
     <div class="w-full flex flex-col md:flex-row justify-center items-center">
         <div class="w-full md:w-[48%]">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-4.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-4.png" alt="Mobile marketing" title="Mobile marketing" srcset="">
         </div>
         <div class="w-full md:w-[48%]">
             <p>
@@ -152,7 +152,7 @@
             </p>
         </div>
         <div class="w-full md:w-[48%]">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-5.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-5.png" alt="email marketing" title="email marketing" srcset="">
         </div>
     </div>
 
@@ -187,13 +187,13 @@
             </ul>
         </div>
         <div class="w-full md:w-[48%]">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-7.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-7.png" alt="social media marketing management" title="social media marketing management" srcset="">
         </div>
     </div>
 </section>
 <!-- ---------------------------Tools We use-------------------------------- -->
 <section class="w-full flex justify-center items-center">
-    <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-6.png" alt="" srcset="">
+    <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-6.png" alt="facebook advertising management" title="facebook advertising management" srcset="">
 </section>
 <!-- cotact us -->
 <app-contact></app-contact>
