--- a/src/app/pages/services/software-development/software-development.component.html
+++ b/src/app/pages/services/software-development/software-development.component.html
@@ -39,7 +39,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4685251-1.png"
-                        alt="">
+                        alt="software development company" title="software development company">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -54,7 +54,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7060983-1.png"
-                        alt="">
+                        alt="Implementation & Deployment" title="Implementation & Deployment">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -69,7 +69,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/8267880-1.png"
-                        alt="">
+                        alt="API Development" title="API Development">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -84,7 +84,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7182359-1.png"
-                        alt="">
+                        alt="System Integrations" title="System Integrations">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -104,7 +104,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4685251-1.png"
-                        alt="">
+                        alt="Custom Software Development" title="Custom Software Development">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -120,7 +120,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7060983-1.png"
-                        alt="">
+                        alt="Implementation & Deployment" title="Implementation & Deployment">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -136,7 +136,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/8267880-1.png"
-                        alt="">
+                        alt="software development services" title="software development services">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -152,7 +152,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7182359-1.png"
-                        alt="">
+                        alt="System Integrations" title="System Integrations">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -167,7 +167,7 @@
         </div>
 
         <div class="w-full md:w-[40%] flex flex-col">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-3.png" />
+            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-3.png" alt="custom software development services" title="custom software development services"/>
         </div>
     </div>
     <div class="w-full flex justify-center items-center ">
@@ -194,7 +194,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7187449-1.png"
-                        alt="">
+                        alt="Quality Testing" title="Quality Testing">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -209,7 +209,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/3043483-1.png"
-                        alt="">
+                        alt="Data Migrations & Upgrades" title="Data Migrations & Upgrades">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -224,7 +224,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4993419-1.png"
-                        alt="">
+                        alt="Support Services" title="Support Services">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -245,7 +245,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/719079-1.png"
-                        alt="">
+                        alt="Security Services" title="Security Services">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -260,7 +260,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/6966324-1.png"
-                        alt="">
+                        alt="Data Backup & Disaster Recovery" title="Data Backup & Disaster Recovery">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -276,7 +276,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/3713716-1.png"
-                        alt="">
+                        alt="Infrastructure Support Services" title="Infrastructure Support Services">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -318,7 +318,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7187449-1.png"
-                        alt="">
+                        alt="Customer Relationship Management" title="Customer Relationship Management">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -334,7 +334,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/3043483-1.png"
-                        alt="">
+                        alt="Enterprise Resource Planning - ERP" title="Enterprise Resource Planning - ERP">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -350,7 +350,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4993419-1.png"
-                        alt="">
+                        alt="Payment Processing Solutions" title="Payment Processing Solutions">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -366,7 +366,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/4993419-1.png"
-                        alt="">
+                        alt="AI & IoT-Connectivity Solutions" title="AI & IoT-Connectivity Solutions">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -411,12 +411,12 @@
         </div>
 
         <div class="w-full md:w-[40%] flex flex-col">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-7.png" />
+            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-7.png" alt="custom application development company" title="custom application development company"/>
         </div>
     </div>
     <div class="w-full flex flex-col-reverse md:flex-row justify-center items-center mt-[50px]">
         <div class="w-full md:w-[40%] flex flex-col">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-8.png" />
+            <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-8.png" alt="Our Programming Expertise" title="Our Programming Expertise"/>
         </div>
         <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-5 md:p-5">
             <h2 class="text-[20px]  font-bold text-[#33B5CC]">
@@ -464,7 +464,7 @@
     <div class="w-full md:w-[70%] flex flex-row flex-wrap justify-center items-center">
         <div class="w-[40%] md:w-[30%] flex-row flex-nowrap" *ngFor="let items of Technology">
             <span>
-                <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/{{items.URL}}" alt="" srcset="">
+                <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/{{items.URL}}" alt="Industries We Serve" title="Industries We Serve" srcset="">
             </span> 
             <p>{{items.name}}</p>
         </div>
