--- a/src/app/pages/services/web-development/web-development.component.html
+++ b/src/app/pages/services/web-development/web-development.component.html
@@ -136,7 +136,7 @@
             </h2>
         </div>
         <div>
-            <img src="{{hostUrl}}assets/frontent_files/img/services/amazon-web-im.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/amazon-web-im.png" alt="Web Development Company | Web Development Services" title="Web Development Company | Web Development Services" srcset="">
         </div>
 
     </div>
@@ -162,7 +162,7 @@
         <div *ngFor="let item of Technology"
             class="w-full md:w-[30%] lg:w-[22%] px-[30px] py-[10px] flex flex-row gap-9 justify-center items-center border-[3px] rounded hover:shadow-lg bg-[#fff]">
             <img class="w-[70px] h-[70px]"
-                src="{{hostUrl}}assets/frontent_files/img/services/technology-icons/{{item.URL}}.png" />
+                src="{{hostUrl}}assets/frontent_files/img/services/technology-icons/{{item.URL}}.png" alt="Web App Development Company in Hyderabad" title="Web App Development Company in Hyderabad" />
             <p class="font-bold text-black">
                 {{item.name}}
             </p>
@@ -186,7 +186,7 @@
     </div>
     <div class="flex flex-col flex-wrap justify-center items-center my-5">
         <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-1.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-1.png" alt="Web Development Company in Hyderabad" title="Web Development Company in Hyderabad" srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">More than just a pretty face</h2>
                 <p>Although the appearance of your website is the first impression that you make on a potential
@@ -201,10 +201,10 @@
                     what you have to offer, build a relationship with your company, and follow the buyer’s journey to a
                     decision – without a hitch.</p>
             </div>
-            <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-2.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-2.png" alt="web development" title="web development" srcset="">
         </div>
         <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-1.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-1.png" alt="web development" title="web development" srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Working together on design and development</h2>
                 <p>We collaborate with you to plan and execute the details of your website so that it connects with your
@@ -316,7 +316,7 @@
             Industries We Serve
         </h2>
     </div>
-    <img src="{{hostUrl}}assets/frontent_files/img/services/served-industry.png" />
+    <img src="{{hostUrl}}assets/frontent_files/img/services/served-industry.png" alt="Contentful Development" title="Contentful Development" />
 </section>
 
 <section class="w-full flex flex-col">
@@ -327,7 +327,7 @@
     </div>
     <div class="w-full flex flex-col md:flex-row justify-center items-center  gap-5 gap-y-10">
         <div class="w-full md:w-[50%] flex flex-col ">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/contentful-development.png" />
+            <img src="{{hostUrl}}assets/frontent_files/img/services/contentful-development.png" alt="design and development" title="design and development"/>
         </div>
         <div class="w-full md:w-[48%] flex flex-col">
             <p class="text-[25px] font-semibold text-[#33B5CC] mb-3">When it comes to Contentful Development, there are
