--- a/src/app/products/clumps-ecommerce-suite/clumps-ecommerce-suite.component.html
+++ b/src/app/products/clumps-ecommerce-suite/clumps-ecommerce-suite.component.html
@@ -59,7 +59,7 @@
         <p class="w-[80%] text-center">Our all-in-one platform provides the solutions you need for greater visibility, smarter ad campaigns, and more personalized marketing.</p>
     </div>
     <div class="w-[80%] flex flex-col my-10 items-center md:px-5 mb-5">
-        <img class="w-full" src="{{hostUrl}}assets/frontent_files/img/product/ecommerce/ecommerce.png" alt="" srcset="">
+        <img class="w-full" src="{{hostUrl}}assets/frontent_files/img/product/ecommerce/ecommerce.png" alt="Empowering eCommerce Growth - Clumps Solutions" title="Empowering eCommerce Growth - Clumps Solutions" srcset="">
     </div>
 </section>
 <section class="w-full flex flex-col justify-center  my-10 items-center md:px-5 mb-5 gap-y-3">
