--- a/src/app/products/clumps-marketing-suite/clumps-marketing-suite.component.html
+++ b/src/app/products/clumps-marketing-suite/clumps-marketing-suite.component.html
@@ -90,11 +90,11 @@
                 <p>Leverage user profiles to understand everything from demographic and behavioral data, custom
                     attributes, channel reachability, etc. to run targeted campaigns for the right set of users.</p>
             </div>
-            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-1.png" alt=""
+            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-1.png" alt="Customer Data - View on Single Screen" title="Customer Data - View on Single Screen"
                 srcset="">
         </div>
         <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
-            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-2.png" alt=""
+            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-2.png" alt="Personalized Campaigns - Scale Your Marketing" title="Personalized Campaigns - Scale Your Marketing"
                 srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Personalize your campaigns at scale!</h2>
@@ -108,7 +108,7 @@
                     Clicks .</h2>
                 <p>Create automation workflows within minutes with our intuitive drag-and-drop editor.</p>
             </div>
-            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-3.png" alt=""
+            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-3.png" alt="Automate Marketing Campaigns with Ease" title="Automate Marketing Campaigns with Ease"
                 srcset="">
         </div>
     </div>
