--- a/src/app/products/clumps-systemic-solutions-erp/clumps-systemic-solutions-erp.component.html
+++ b/src/app/products/clumps-systemic-solutions-erp/clumps-systemic-solutions-erp.component.html
@@ -239,11 +239,11 @@
 
                 </div>
             </div>
-            <img class="w-full md:w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-1.png" alt=""
+            <img class="w-full md:w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-1.png" alt="retail management software" title="retail management software"
                 srcset="">
         </div>
         <div class="w-full md:w-[90%] flex flex-col-reverse md:flex-row justify-center items-center mt-[100px]">
-            <img class="w-full md:w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-2.png" alt=""
+            <img class="w-full md:w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-2.png" alt="retail management software" title="retail management software"
                 srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Sales & Purchase</h2>
@@ -291,7 +291,7 @@
 
                 </div>
             </div>
-            <img class="w-full md:w-[48%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-3.png" alt=""
+            <img class="w-full md:w-[48%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-3.png" alt="retail management software" title="retail management software"
                 srcset="">
         </div>
     </div>
