--- a/src/app/products/crm-plus/crm-plus.component.html
+++ b/src/app/products/crm-plus/crm-plus.component.html
@@ -69,29 +69,29 @@
   </div>
   <div class="w-full h-[100vh] relative flex flex-col justify-center items-end ">
     <div class=" md:absolute right-[32%] top-[10%] flex justify-center items-center">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/dashboard-2.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/dashboard-2.png" alt="Clumps CRM plus" title="Clumps CRM plus">
     </div>
     <div class="md:absolute bottom-[10%] left-[25%] flex justify-center items-center">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Dashboard.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Dashboard.png" alt="Clumps CRM plus" title="Clumps CRM plus">
     </div>
     <div class="hidden md:flex absolute top-[10%] left-[15%] flex-col">
       <p class="font-bold text-[14px] text-[#fff]">Contact Management</p>
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Contact-Management.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Contact-Management.png" alt="Contact Management" title="Contact Management">
     </div>
     <div class="hidden md:flex absolute top-[10%] right-[12%] z-10  flex-row items-end">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Centralize-Customer-Data.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Centralize-Customer-Data.png" alt="Centralize Customer Data" title="Centralize Customer Data">
       <p class="font-bold text-[14px] text-[#fff]">Centralize Customer Data</p>
     </div>
     <div class="hidden md:flex absolute top-[35%] right-[12%] z-10 flex-row items-start">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Automated-Workflows.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Automated-Workflows.png" alt="Automated Workflows" title="Automated Workflows">
       <p class="font-bold text-[14px] text-[#fff]">Automated Workflows</p>
     </div>
     <div class="hidden md:flex absolute top-[60%] right-[15%] z-10 flex-row items-end">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Reporting-and-Analytics.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Reporting-and-Analytics.png" alt="Reporting and Analytics" title="Reporting and Analytics">
       <p class="font-bold text-[14px] text-[#fff]">Reporting and Analytics</p>
     </div>
     <div class="hidden md:flex absolute top-[60%] left-[10%] z-10 flex-col justify-start items-start">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Sales-Pipeline-Management.png" alt="">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Sales-Pipeline-Management.png" alt="Sales Pipeline Management" title="Sales Pipeline Management">
       <p class="font-bold text-[14px] text-[#fff]">Sales Pipeline Management</p>
     </div>
   </div>
@@ -116,10 +116,10 @@
   <div
     class="w-full relative flex flex-col-reverse  md:flex-row justify-center items-center ">
     <div class="w-full md:w-[80%] flex flex-row justify-end items-end px-[20px]">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/crm-plus.png" alt="phone dispaly" />
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/crm-plus.png" alt="crm plus" title="crm plus" />
     </div>
     <div class="w-[80%] flex flex-row justify-start items-end px-[20px]">
-      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/home-screen.png" alt="phone dispaly" />
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/home-screen.png" alt="crm plus" title="crm plus" />
     </div>
     <div class="absolute xsm:bottom-[130px] md:bottom-auto xsm:right-[15%] md:right-auto md:top-[30%] md:left-[23%] rotate-[325deg] md:rotate-0">
       <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 330 148" fill="none" class="xsm:w-[180px] xsm:h-[150px] md:w-[330px] md:h-[148px]">
