--- a/src/app/products/layouts/header/header.component.html
+++ b/src/app/products/layouts/header/header.component.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <a [routerLink]="['/home']" class="cursor-pointer flex flex-nowrap">
-            <img class="h-[30px] xl:h-auto" src="./assets/frontent_files/img/clumpslogo.png" alt="" srcset="">
+            <img class="h-[30px] xl:h-auto" src="./assets/frontent_files/img/clumpslogo.png" alt="clumpslogo" title="clumpslogo" srcset="">
             <p class="text-black text-[20px] xl:text-[30px] font-bold">{{logo}}</p>
         </a>
     </div>
