--- a/src/app/layouts/contact/contact.component.html
+++ b/src/app/layouts/contact/contact.component.html
@@ -2,17 +2,17 @@
     <div
         class=" w-[95%] md:w-[80%] flex flex-col-reverse md:flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
         <div class=" w-full md:w-[30%] flex flex-col justify-around items-start gap-5">
-            <img src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="" srcset="">
+            <img src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="clumps Social icons" title="clumps Social icons" srcset="">
             <div class="w-full flex flex-row justify-center items-center gap-5">
                 <span>
                     <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-phone.png"
-                        alt="" srcset="">
+                        alt="clumps Social icons" title="clumps Social icons" srcset="">
                 </span>
                 <span>Phone: +91 9665891425</span>
             </div>
             <div class="w-full flex flex-row justify-center items-center gap-5">
                 <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt=""
+                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt="clumps Social icons" title="clumps Social icons"
                         srcset="">
                 </span>
                 <span>Email: info@clumpssoftware.com</span>
