--- a/src/app/pages/services/app-development/app-development.component.html
+++ b/src/app/pages/services/app-development/app-development.component.html
@@ -78,7 +78,7 @@
         <div *ngFor="let item of starData" class=" md:w-[20%] lg:h-[200px] flex flex-col gap-5 border-2 p-4 rounded-[40px] justify-center items-center"> 
             
             <span>
-                <img class="h-[50px]" src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt="" srcset="">
+                <img class="h-[50px]" src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/4066310-1.png" alt="app development" title="app development" srcset="">
             </span>
             <p>
                 {{item.desc}}
@@ -108,7 +108,7 @@
         </p>
     </div>
     <div class="w-full flex justify-center items-center">
-        <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/app-develop-2.png" alt="" srcset="">
+        <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/app-develop-2.png" alt="Customized Software Solutions" title="Customized Software Solutions" srcset="">
     </div>
 </section>
 <section class="flex flex-col mt-[100px] mb-5">
@@ -129,7 +129,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/160138-1.png"
-                        alt="">
+                        alt="Android App Development" title="Android App Development">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -143,7 +143,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/1240942-1.png"
-                        alt="">
+                        alt="Ios App Development" title="Ios App Development">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
@@ -158,7 +158,7 @@
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/app-development/icons/1077039-1.png"
-                        alt="">
+                        alt="Windows App Development" title="Windows App Development">
                 </div>
                 <div class="w-[78%] md:w-[80%] flex flex-col">
                     <h2 class="text-[#33B5CC] text-[20px]">
