--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -7,7 +7,7 @@
                 <li><a href="#" class="text-white">Services</a></li>
                 <li><a href="#" class="text-white hidden md:block">Use Case</a></li>
                 <li><a href="#" class="text-white">Pricing</a></li>
-                <li><a href="#" class="text-white">Blog</a></li>
+                <li><a routerLink="/blogs" class="text-white">Blog</a></li>
             </ul>
             <div class="w-full md:w-[38%] lg:w-[55%] flex flex-row gap-5 justify-center text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
